# glance

./: .gitattributes  .gitignore  CLAUDE.md  LICENSE  README.md  build-mermaid.mjs  install.sh  package-lock.json  package.json  prd.json  test-mermaid.md  v0.md
.github/workflows/: release.yml  test-install.yml
macos/: project.yml
macos/.build/index-build/: build.db  plugin-tools.yaml
macos/.build/index-build/arm64-apple-macosx/debug/: description.json
macos/.build/index-build/arm64-apple-macosx/debug/Glance.build/: AppDelegate.d  AppDelegate.swiftdeps  AppDelegate~partial.swiftmodule  CLIHandler.d  CLIHandler.swiftdeps  CLIHandler~partial.swiftmodule  ConfigManager.d  ConfigManager.swiftdeps  ConfigManager~partial.swiftmodule  DaemonServer.d  DaemonServer.swiftdeps  DaemonServer~partial.swiftmodule  FileHandler.d  FileHandler.swiftdeps  FileHandler~partial.swiftmodule  FileWatcher.d  FileWatcher.swiftdeps  FileWatcher~partial.swiftmodule  Glance.emit-module.d  LocalFileScheme.d  LocalFileScheme.swiftdeps  LocalFileScheme~partial.swiftmodule  MainWindow.d  MainWindow.swiftdeps  MainWindow~partial.swiftmodule  WebViewController.d  WebViewController.swiftdeps  WebViewController~partial.swiftmodule  master.priors  output-file-map.json  resource_bundle_accessor.d  resource_bundle_accessor.swiftdeps  resource_bundle_accessor~partial.swiftmodule  sources
macos/.build/index-build/arm64-apple-macosx/debug/Modules/: Glance.swiftdoc  Glance.swiftmodule  Glance.swiftsourceinfo
macos/Glance/: AppDelegate.swift  CLIHandler.swift  ConfigManager.swift  DaemonServer.swift  FileHandler.swift  FileWatcher.swift  Info.plist  LocalFileScheme.swift  MainWindow.swift  WebViewController.swift
scripts/: glance-linux.sh  glance-macos.sh
src-tauri/: Cargo.toml  Info.plist  glance.desktop  tauri.conf.json
src-tauri/capabilities/: migrated.json
src-tauri/icons/: icon.icns
src-tauri/src/: main.rs
src-tauri/windows/: hooks.nsi
tasks/: prd-glance-product-requirements-document.md
ui/: beautiful-mermaid.min.js  bridge.js  index.html
(+237 files in other folders)
