[package]
name = "glance"
version = "0.1.0"
edition = "2021"
description = "A minimal markdown viewer"

[dependencies]
tauri = { version = "1.8", features = ["dialog-open", "global-shortcut-all", "protocol-asset"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
toml = "0.8"
notify = "6"
directories = "5"

[build-dependencies]
tauri-build = { version = "1.5", features = [] }

[features]
default = ["custom-protocol"]
custom-protocol = ["tauri/custom-protocol"]

[profile.release]
strip = true
lto = true
opt-level = "z"
panic = "abort"
codegen-units = 1

[[bin]]
name = "glance"
path = "src/main.rs"
